--- a/bu.html
+++ b/bu.html
@@ -8,10 +8,10 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="вход - копия.html">вход - копия</a></td></tr>
-<tr><td><a href="созданиеКупона - копия.html">созданиеКупона - копия</a></td></tr>
-<tr><td><a href="удалениеКупона - копия.html">удалениеКупона - копия</a></td></tr>
-<tr><td><a href="выход - копия.html">выход - копия</a></td></tr>
+<tr><td><a href="inp.html">inp</a></td></tr>
+<tr><td><a href="creat.html">creat</a></td></tr>
+<tr><td><a href="del.html">del</a></td></tr>
+<tr><td><a href="out.html">out</a></td></tr>
 </tbody></table>
 </body>
 </html>
